# meetbot-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
lib/: bot_server.py  events.py  google.py  openai_realtime.py  recall.py  server.py  server_app.py  websocket_server.py
lib/server_endpoints/: add_bot.py  camera.py  camera_audio.py  enable_camera.py  healthz.py  index.py  start_call.py  ws.py
lib/templates/: camera.html.jinja  index.html.jinja
