[project]
name = "meetbot-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "aiohttp>=3.13.2",
    "google-apps-meet>=0.4.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "openai[realtime]>=2.33.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "soxr>=1.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
